earthreader/web/static/css/master.css
html, body {
	width: 100%;
	margin: 0;
	padding: 0;
	overflow: hidden;
	height: 100%;
	font-family: "Helvetica Neue", clean, sans-serif;
}

body {
	background: white;
	line-height: 1.2;

	animation-name: small;
	animation-duration: .001s;
}

[role=button],
[role=link] {
	cursor: pointer;
}

body .wrapper {
	margin-top: -3em;
	padding-top:3em;
	height: 100%;
	box-sizing: border-box;
}

.site-header {
	position: relative;
	z-index: 3;
	margin: 0;
	padding: .5em 0;
	background: white;
	box-shadow: 0 1px 2px #aaa;
	user-select: none;
}

.site-header h1 {
	margin: 0;
	padding-left: .5em;
}

.off-canvas-menu,
.off-canvas-side {
	padding: 0 .5em;
	font-size: 1.3em;
	user-select: none;
}

.off-canvas-side {
	float: right;
}

.off-canvas-menu:before {
	content: "\2630";
}

.off-canvas-side:before {
	content: "\2637";
}

[role=navigation],
[role=main],
[role=complementary] {
	width: 100%;
	height: 100%;
	transition: all .2s ease 0s;
	overflow: scroll;
}

[role=navigation],
[role=complementary] {
	position: relative;
	float: left;
	background: rgb(252, 252, 255);
	z-index: 2;
	user-select: none;
}

[role=navigation] {
	box-shadow: 1px 0 2px #aaa;
	margin-left: -100%;
}

[role=complementary] {
	box-shadow: -1px 0 2px #aaa;
	margin-right: -100%;
}

[role=main] {
	float: left;
	z-index: 1;
	background: white;
	position: relative;
}

.menu-open [role=navigation] {
	width: 90%;
	margin-left: 0;
}

.menu-open [role=main] {
	margin-right: -100%;
}

.menu-open [role=complementary] {
	margin-right: -100%;
	float: right;
}

.side-open [role=complementary] {
	width: 90%;
	margin-right: 0;
}

.side-open [role=main] {
	margin-left: -90%;
}

[role=navigation] .current {
	font-weight: 900;
}

[role=main] .entry-title time,
[role=main] .entry-title .feed,
[role=main] .entry-title .title {
	display: block;
	margin: 0 1em;
}


[role=main] .entry-title time {
	font-size: .7em;
}

[role=main] .entry-title .feed {
	color: rgb(100, 100, 100);
}

a, a:hover, a:active, a:link, a:visited {
	text-decoration: none;
	color: #3bf;
}

h1 {
	font-size: 1.6em;
}

h2 {
	font-size: 1.2em;
}

[role=navigation] ul,
[role=navigation] ul,
[role=complementary] ol,
[role=complementary] ol {
	list-style: none;
	padding: 0;
	margin: 0;

}

[role=navigation] ul > li,
[role=complementary] ul > li {
	list-style: none;
	padding: 0;
	margin: 0;
}

input, textarea {
	width: 100%;
	margin: .5em 0;
	padding: 1em;
	display: block;
	border: 1px solid rgb(130, 130, 130);
	box-sizing: border-box;
}

input:not([type=button]):not([type=submit]):focus, textarea:focus {
	border: 1px solid rgb(0, 130, 240);
}

.form {
	padding: 0 .5em;
	background: rgba(0, 0, 0, .1);
	box-shadow: 0 1px 2px rgb(136, 136, 136) inset;
}

.site-header h1 {
	display: inline-block;
}

.site-header nav {
	float: right;
	font-size: 1.6em;
}

.site-header nav .item {
	height: 100%;
	padding: 0 .3em;
	display: inline-block;
}

[role=navigation] .header,
[role=complementary] .header {
	padding: 0.4em 0 .5em .7em;
	border-bottom: 1px solid rgb(237, 237, 237);
	background: rgb(245, 245, 255);
}

[role=navigation] li:not(.fold),
[role=complementary] li:not(.fold) {
	padding: 0.4em 0 .5em .7em;
	border-bottom: 1px solid rgba(0, 0, 0, .1);
}

[role=navigation] li:not(.fold):hover,
[role=complementary] li:not(.fold):hover {
	background: rgb(230, 230, 253);
}

[role=navigation] > ul,
[role=complementary] > ul {
	border-bottom: 2px solid white;
}

[role=navigation] ul.feedlist li.fold {
	margin-left: 1em;
}

[role=navigation] li.header.closed + li.fold {
	display: none;
}

[role=main] header {
	border-bottom: 1px solid rgb(235, 235, 235);
	padding: 1.5em 2em;
}

[role=main] article .entry-title {
	padding: .5em 2em;
	border-bottom: 1px solid rgb(238, 238, 238);
	background: rgb(253, 253, 253);
}

[role=main] article.current .entry-title {
	background: rgb(243, 243, 253);
}

[role=main] article .entry-title:hover {
	background: rgb(245, 245, 255);
}

[role=main] article .entry-content {
	padding: 1em 3em;
	background: rgb(255, 255, 255);
	line-height: 1.4;
	box-shadow: 0 1px 2px rgb(100, 100, 100) inset;
}

[role=main] .entry-content > h1 {
	text-align: center;
}

@media all and (min-width: 800px) {
	body {
		animation-name: big;
	}

	.off-canvas-menu {
		display: none;
	}

	[role=navigation] {
		width: 20%;
		margin-left: 0;
	}

	[role=main] {
		width: 80%;
		margin-left: 0;
	}

	[role=complementary] {
		width: 20%;
	}

	.side-open [role=navigation] {
		margin-left: -20%;
	}

	.side-open [role=main] {
		margin-left: 0;
	}

	.side-open [role=complementary] {
		width: 20%;
	}

	[role=main] .entry-title time,
	[role=main] .entry-title .feed,
	[role=main] .entry-title .title {
		display: inline-block;
	}

	[role=main] .entry-title .feed {
		width: 15%;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

